@@ -1,0 +1,2 @@
+declare p as pointer to int
+declare q as pointer to int
