@@ -1,0 +1,1 @@
+cdecl @ @ -xc89 @ explain *a[4] @ 0
