@@ -1,0 +1,1 @@
+cdecl @ @ -xc89 @ explain (*p) @ 0
